# GpuSeqAlign

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GpuNW.sln  GpuNW.vcxproj  GpuNW.vcxproj.filters  GpuSeqAlign.sln  GpuSeqAlign.vcxproj  GpuSeqAlign.vcxproj.filters  LICENCE  README.md  build-v1.ps1  build-v2.ps1  build.ps1
!docs/Templejt/: Uputstvo.txt
cuda/: Common.h  CpuParallel.cpp  CpuSequential.cpp  GpuParallel.cu  GpuParallel1.cu  GpuParallel2.cu  Main.cpp  build.ps1  common.h  common.hpp  cpu1-row.cpp  cpu2-diag.cpp  cpu3-diagrow-pll.cpp  cpu3-diagrow.cpp  gpu2-diagdiag.cu  gpu3-diagdiag.cu  main.cpp  main.cu  makefile  needle.out3.txt  nw-cpu1-row-st.cpp  nw-cpu1-row-st.hpp  nw-cpu2-diag-st.cpp  nw-cpu2-diag-st.hpp  nw-cpu3-diagrow-st.cpp  nw-cpu3-diagrow-st.hpp  nw-cpu4-diagrow-mt.cpp  nw-cpu4-diagrow-mt.hpp  nw-gpu3-diagdiag-coop.cu  nw-gpu3-diagdiag-coop.hpp  trace1-diag.cpp  trace1-diag.hpp  updatescore1-simple.hpp  updatescore2-incremental.hpp
res/: blosum62.json
resrc/: blosum.json  nw-params1.json  pair_debug.txt  pair_generated_1.txt  pair_generated_2.txt  pair_optimize.txt  pair_phases.txt  pair_release.txt  param-all1.json  param-all2.json  param-best.json  param-best1.json  param-optimize.json  param-test1.json  param-test2-gpu.json  param0-test.json  param1-all.json  param1-best.json  param2-best.json  param_best.json  seq-gen0.json  seq-gen1-0.1k.json  seq-gen2-1k.json  seq-gen2.json  seq-gen3-10k.json  seq-gen3.json  seq-optimize.json  seq-test1.json  seq0-test.json  seq1-allparams.json  seq1-gen-0.1k.json  seq2-gen-1k.json  seq3-gen-10k.json  seq3-gen-1k.json  seq_debug.fa  seq_debug.json  seq_gen1.fa  seq_gen1.json  seq_gen2.fa  seq_gen2.json  (+10 more)
src/: algorithm.cpp  algorithm.hpp  benchmark.cpp  benchmark.hpp  cmd_parser.cpp  cmd_parser.hpp  common.cpp  common.hpp  cross_platform.hpp  defer.hpp  dict.hpp  file_formats.cpp  file_formats.hpp  fmt_guard.hpp  io.cpp  io.hpp  json.hpp  json_fwd.hpp  lang.hpp  main.cpp  main.cu  math.hpp  matrix.cpp  memory.hpp  nw-algorithm.cpp  nw-algorithm.hpp  nw-cpu1-row-st.cpp  nw-cpu1-row-st.hpp  nw-cpu1-st-row.cpp  nw-cpu2-diag-st.cpp  nw-cpu2-diag-st.hpp  nw-cpu2-st-diag.cpp  nw-cpu3-diagrow-st.cpp  nw-cpu3-diagrow-st.hpp  nw-cpu3-st-diagrow.cpp  nw-cpu4-diagrow-mt.cpp  nw-cpu4-diagrow-mt.hpp  nw-cpu4-mt-diagrow.cpp  nw-gpu1-diag-ml.cu  nw-gpu1-ml-diag.cu  (+49 more)
